--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     <main>
         <section class="about">
             <h3 class="section-title">About Me</h3>
-            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+            <p class="section-description">I, m a web designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
             <div class="about-info-container">
                 <div class="about-info">
                     <p class="info-title">Name:</p>
-                    <p class="info-description">Mary Hardy</p>
+                    <p class="info-description">Shariful islam</p>
                 </div>
                 <div class="about-info">
                     <p class="info-title">Email:</p>
@@ -45,11 +45,11 @@
                 </div>
                 <div class="about-info">
                     <p class="info-title">Specialty:</p>
-                    <p class="info-description">Web Dev</p>
+                    <p class="info-description">Full stack Web developer</p>
                 </div>
                 <div class="about-info">
                     <p class="info-title">Location:</p>
-                    <p class="info-description">Dhaka, BD</p>
+                    <p class="info-description">Chemnitz, Germany</p>
                 </div>
             </div>
         </section>
